# LibCIVA

./: .clang-format  .editorconfig  .gitignore  .prettierrc.cjs  AGENTS.md  CMakeLists.txt  LICENSE.txt  README.md  TODO.md  data-analysis.js  graph_lateral_ap.py  graph_vertical_ap.py  package.json  stack-analysis.js
Examples/: build-all.ps1
Examples/civa24/: build.ps1  civa24.sln  civa24.vcxproj
Examples/civa24/src/: civa24.cpp  civa24.h
Examples/civaMSFS2024/: civaMSFS2024.sln  civaMSFS2024.vcxproj
Examples/civaMSFS2024/src/: civaMSFS2024.cpp  civaMSFS2024.h  varManager.cpp  varManager.h
Examples/civaWin/: CMakeLists.txt  build.ps1  simBrief.json  varManager.h
Examples/civaWin/src/: civaWin.cpp  civaWin.h  lateralAutopilot.cpp  lateralAutopilot.h  varManager.cpp  varManager.h  verticalAutopilot.cpp  verticalAutopilot.h
References/: EDDMEDDM.pln
Scripts/: data-analysis.js  graph_lateral_ap.py  graph_vertical_ap.py  stack-analysis.js
libciva/: CMakeLists.txt  libciva.cpp  libciva.h  libciva.sln  msfs.vcxproj  msfs.vcxproj.filters  msfs2024.vcxproj  msfs2024.vcxproj.filters  package-for-fss.ps1
libciva/config/: config.cpp  config.h
libciva/geoutils/: geoutils.cpp  geoutils.h
libciva/include/: libciva.h
libciva/include/config/: config.h
libciva/include/ins/: ins.h
libciva/include/insContainer/: insContainer.h
libciva/include/logger/: logger.h
libciva/include/state/: snapshot.h  state.h
libciva/include/types/: types.h
libciva/include/varManager/: varManager.h
libciva/ins/: ins.cpp  ins.h  insDisplay.cpp  insEvent.cpp  insSetGet.cpp
libciva/ins/modes/: align.cpp
libciva/logger/: logger.cpp  logger.h
libciva/src/config/: config.cpp
libciva/src/ins/: ins.cpp  insDisplay.cpp  insEvent.cpp  insSaveRestore.cpp  insSetGet.cpp  insUpdates.cpp
libciva/src/ins/modes/: align.cpp
libciva/src/insContainer/: insContainer.cpp
libciva/src/logger/: logger.cpp
libciva/src/state/: snapshot.cpp  state.cpp
libciva/src/types/: types.cpp
libciva/src/varManager/: varManager.cpp
libciva/types/: types.cpp  types.h
libciva/varManager/: varManager.cpp  varManager.h
libcivaMSFS24/: libcivaMSFS.cpp  libcivaMSFS.h  libcivaMSFS.vcxproj  libcivaMSFS24.cpp  libcivaMSFS24.h  libcivaMSFS24.vcxproj  msfsVarManager.cpp
libcivaWin/: libcivaWin.cpp  libcivaWin.h  winVarManager.cpp  winVarManager.h
